--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <div id="border-left" class="experience-item">
                 <h2>Full Stack Web Developer</h2>
                 <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p><br><br>
             </div>
             <div id="border-right" class="experience-item">
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange-color">2022-2024 | Programming Hero Learner</h3>
-                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p><br><br>
             </div>
         </div>
     </section><br><br><br>
